<resources>
    <string name="app_name" translatable="false">AppDein</string>
    <string name="registrarse">registrarse</string>
    <string name="tel_fono">Teléfono</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Nombre">Nombre</string>
    <string name="Email">Email</string>
    <string name="FechaNacimiento">Fecha de nacimiento</string>
    <string name="Guardar">Guardar</string>
    <string name="Registro">Registro</string>
    <string name="numero_de_usuarios">"Numero de usuarios: "</string>
    <string name="delete_validate">¿seguro que desea eliminarlo?</string>
    <string name="action_settings">Sobre AppCRUD</string>
    <string name="action_buscar">buscar</string>
    <string name="action_nuevo">nuevo</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="action_config">Configuración</string>
    <string name="action_order">Ordenar</string>
    <string name="appdein" translatable="false">AppDein</string>
    <string name="todo">TODO</string>
    <string name="desarrolador_jaime_lovera_ulecia">Desarrolador: Jaime Lovera Ulecia</string>
    <string name="contacto_ajlovera_iesfranciscodelosrios_es">Contacto: ajlovera@iesfranciscodelosrios.es</string>
    <string name="title_activity_buscar">BuscarActivity</string>
    <string name="app_dein">App DEIN</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="imagen_para_abrir_calendario">Imagen para abrir calendario</string>
    <string name="abrir_galeria">Abrir galeria</string>
    <string name="BuscarPorEmail">Buscar por Email</string>
    <string name="BuscarPorNombre">Buscar por Nombre</string>
    <string name="choose_picture" translatable="false">Escoger imagen</string>
    <string name="Id_de_usuario" translatable="false">ID de Usuario</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="refrescar" translatable="false">Refrescar</string>
</resources>
