<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Views.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="91dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="133dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/appdein"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView7"
                style="@style/FuentePrincipal"
                android:layout_width="match_parent"
                android:layout_height="143dp"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/ic_action_name"
                android:gravity="center"
                android:text="@string/desarrolador_jaime_lovera_ulecia"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textView8"
                style="@style/FuentePrincipal"
                android:layout_width="match_parent"
                android:layout_height="193dp"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/ic_action_email"
                android:gravity="center"
                android:text="@string/contacto_ajlovera_iesfranciscodelosrios_es"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textDirection="rtl"
                android:textIsSelectable="false"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>