<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="441dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="Búsqueda de Usuarios"
                android:textAppearance="@style/FuentePrincipal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputNombre"
                android:layout_width="match_parent"
                android:layout_height="76dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNombre"
                    android:layout_width="216dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="416dp"
                    android:drawableStart="@drawable/ic_action_name"
                    android:ems="10"
                    android:hint="@string/BuscarPorNombre"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="75dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="217dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/ic_action_email"
                    android:ems="10"
                    android:hint="@string/BuscarPorEmail"
                    android:inputType="text"
                    tools:layout_conversion_absoluteHeight="47dp"
                    tools:layout_conversion_absoluteWidth="216dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="146dp" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
                    tools:layout_conversion_absoluteHeight="235dp"
                    tools:layout_conversion_absoluteWidth="235dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="609dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/fechaLayout"
                android:layout_width="408dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText4">

                <EditText
                    android:id="@+id/editTextFecha"
                    android:layout_width="368dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/ic_action_date"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/FechaNacimiento"
                    android:inputType="date" />

                <ImageButton
                    android:id="@+id/fechaButtom"
                    android:layout_width="44dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/imagen_para_abrir_calendario"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar" />

            </LinearLayout>

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Button" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>